# dist-ml

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  codex.md  docker-compose.yml  pyproject.toml  requirements.txt
client/: __init__.py  load_gen.py
common/: protocol.cpp  protocol.h  socket_utils.cpp  socket_utils.h
param_server/: aggregator.cpp  aggregator.h  main.cpp  ps_server.cpp  ps_server.h
proto/: ps.proto  serving.proto
scripts/: train_distributed.py
serving/: autoscaler.cpp  autoscaler.h  batcher.cpp  batcher.h  inference_server.cpp  inference_server.h  main.cpp
test/: cpp_core_test.cpp  test_python_training.py
worker/: __init__.py  data_shard.py  model.py  rpc_client.py  train_worker.py
